src/assets/scss/style.scss
@import "./palette.scss";

@import url('http://fonts.googleapis.com/css?family=Raleway:700,400,300');
@import url('http://fonts.googleapis.com/css?family=Roboto:700,400,300');
@import url('http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext');




html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  }

body{
  background: $deepPurp;
}

body .page-container{
  font-family: 'Dosis','Raleway','Open Sans',sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
  width:100%;
  max-width: 2356px;
  margin:0 auto;
  height: auto;

}
h1{
  font-size:3em;
  font-family: 'Dosis-SemiBold';
}
h2{
  font-size: 2em;

}
h3{
  font-size: 1.666em;
}
h4{
  font-size:1.333em;
}
a{
  text-decoration: none;
  color:white;
  text-shadow: 1px 1px #bfc0c0;
}

.blueprint-grid{
  background-color: $bluprint;
  background-size:133%;
}
.vaporwave-road{
  background-color: $deepPurp;
  background:url(../../images/header_resize_bg.jpg) center no-repeat;
  background-size:100%;
}
.superheader{

  max-height: 100%;
  overflow: hidden;
  color: $teel;
  position: relative;
  transition: all 0.50s ease-in-out;
  z-index: 5;
  height:60vw;
  border-bottom: 3px solid $sBlau;

  h1{
    font-size: 5em;
    font-weight: 700;
    text-shadow: 6px 2px $deepPurp;
  }

  span{
    font-style: italic;
    font-size: 200%;
    font-weight: lighter;
    letter-spacing: 1px;
  }

  .fa{
    font-style:normal;
  }

  .container{
    margin:1% 20% 0 20%;

  }
  :nth-child(2){
    max-width: 48%;
    margin:10% auto 10px auto;
  }

  :last-child{
    margin-top:0;
    padding-top:0;
    margin-bottom:0;
    padding-bottom:0;
    bottom:-25%;
    position: relative;
    z-index: 15;
  }
  h2 ~ p{
    position: relative;
    top: 128px;
  }
}

.superheader.super-collapse > .container{
  margin-top: 3rem;
  top:20%;
}

.superheader::after{
  content: '';
  z-index: 1;
}
.fa-chevron-circle-down{
  color:$sBlau;
}

.fa-linkedin,.fa-github{
  margin:6px;
  padding:6px;
  background: $bluprint;
  border-radius:20%;
  float:left;
}

.container{
  padding-right: 15px;
  padding-left: 15px;
  position: relative;
  z-index: 10;
}
.centered{
  margin:0 auto;
  text-align: center;
}

.panel{
  margin:1em;
  padding:12px;
  font-size: 18px;
}
.thumbnail {
  max-width: 350px;
  max-height: 350px;
}

.navbar{
  background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 100%);
  background-image:      -o-linear-gradient(top, #3c3c3c 0%, #222 100%);
  background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
  background-image:         linear-gradient(to bottom, #3c3c3c 0%, #222 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
  background-repeat: repeat-x;
  border-radius: 4px;
  position: fixed;
  right: 0;
  left: 0;
  z-index: 1030;
  color: #777;
  width: 100%;
  transition: top 0.2s ease-in-out;

  .navbar-brand{
    text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
    float: left;
    height: 50px;
    padding: 15px 15px;
    font-size: 18px;
    line-height: 20px;

  }
  .up{
    top:-40px;
  }

}

.block{
  z-index: 10;
  padding: 0.25em;
  font-size: 1em;
  height:100%;
  overflow: auto;

}
.block-one,.block-two,.block-three {
  color:$sBlau;
  transition: all 0.50s ease-in-out;

  .panel-body p{
    font-size: 1.2em;
    line-height: 1.625;
  }
}
.block-two{
  .portfolio-list{
    content:"";
  }

}
.block-three{
  box-shadow: 3px 8px 16px 8px $bluprint;
  z-index: 2;

  .col-third{
    text-align: center;
  }

  .skill-list,.tool-list{
    margin-bottom: 0.25rem;
    list-style-type: square;
    li{
      margin-left: 7em;
      max-width: 40%;
    }
  }
}

.panel-heading > h2{
  margin-bottom: 6px;
  padding-bottom:7px;
  border-bottom: 2px solid $grau;
}
.row{
  margin-right: -15px;
  margin-left: -15px;
  max-width: 100%;
  .col{
    float: left;
  }
  .col-third{
    float: left;
    width: 33.33333333%;
  }
}

.portfolio-list > div{
  width: 100%;
  max-height: 416px;
  overflow: none;
  div{
    max-width: 100%;
  }
}

.portfolio-list{
  // max-width: 100%;
  overflow: none;
  display: grid;
  justify-content: space-around;
  margin: 0;
  padding: 0;
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows: 50% 50%;


  .portfolio-item{
    background-color: $portfolioBgDark;

    h4{
      margin-bottom: 0;
    }

   span{
     display: inline-block;
     max-width: 100%;
     padding: 6px 0 4px 0;
     // background-color: $portfolioBgDark;
     font-size: 1.25em;
     text-align: left;
   }

    div:hover .portfolio-content{
      background-color:$teel;
    }
    .portfolio-content{
      width: inherit;
      height:inherit;
      background-color:$portfolioBgDark;

    }
  }

}

.portfolio-item:hover{
  cursor: pointer;
}

.modal{
  color:$deepPurp;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  // background:rgba(0,0,0,0.8);
  z-index: 99999;
  opacity: 1;
  transition: all 400ms ease-in-out;
  pointer-events: none;

  .modal-content{
    overflow: auto;
    font-size: 18px;
    max-height: 720px;
    max-width: 520px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin:0 auto;
    padding:0 0 33px 0;
    border-radius:10px;
    background-image: linear-gradient(to top left, $deepPurp, $wit);

    img{
      max-width: 100%;
    }
    .button{
      display: inline-block;
      text-shadow: none;
      float:right;
      pointer-events: auto;
    }
    .button:hover{
      background-color: $rot;
    }
  }

  h3{
    font-style:italic;
    padding:2px;
    font-family: 'Dosis-SemiBold';
  }
  p{
    padding:9px;
    color:$wit;
    display: inline-block;
  }

}
.modalDialog:target{

  opacity: 1;
  pointer-events: auto;

}
.close {
	background: #606061;
	color: #FFFFFF;
	line-height: 25px;
	position: absolute;
	right: -12px;
	text-align: center;
	top: -10px;
	width: 24px;
	text-decoration: none;
	font-weight: bold;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
	-moz-box-shadow: 1px 1px 3px #000;
	-webkit-box-shadow: 1px 1px 3px #000;
	box-shadow: 1px 1px 3px #000;
}

.close:hover {
  background: #00d9ff;
}

.hidden-section{
  opacity: 0;
  display: none;
}
.visible-section{
  opacity: 1;
  display:block;
}

.button{
  line-height: 1.3333333;
  color: #fff;
  background-color: #337ab7;
  border-color: #2e6da4;
  display: inline-block;
  padding: 6px 12px;
  margin-bottom: 0;
  font-size: 18px;
  font-weight: normal;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
      touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 4px;

}
.button::before{
  // margin:12px;
  content:" ";
}

.large{
  font-size: 18px;
  padding: 10px 16px;
  border-radius: 6px;
  line-height: 1.42857143;
}

#extended-content + .container{
  background-color: $rot;
  z-index: 1;
  padding-top: 22px;
}
#contact{
  background-color: $rot;
  z-index: 10;
  padding-top: 22px;
}


.well{
  pointer-events: all;
  z-index: 1;
  overflow: auto;
  color:$grau;
  padding: 3px;
  h3{
    font-family: 'Dosis','Raleway','Open Sans',sans-serif;
    font-size: 1.5em;
    padding:4px;

  }
  a{
    display: inline-block;
  }
  i:hover{
    background-color: $teel;
    box-shadow: 3px 3px 3px #333;
  }
  .contact{
    display:inline-block;
    font-size: 1.325em;
    position: relative;
    bottom:25px;
    padding:2px;
    overflow: auto;
    min-height: 33px;
    a:hover{
      color:$wit;
      text-shadow: 1px 1px 1px $grau;
      font-weight: 600;
    }
  }
}

footer{
  clear:both;
  color:$grau;
  margin-top: 1em;
  background-color: $deepPurp;
}


#extended-content{
  color: #BFc0c0;
  background: #4F5D75;
  transition: all 0.5s ease;
}

 div.container.group.block-one ~ div.generic.container.btn{
  margin:22px;
}

@media screen and(max-width: 768px) {
  .container {
    max-width: 640px;
  }
  .page-container{
    max-width: 750px;
  }
  .row .col-third{
    float: none;
    clear: both;
    width: 100%;
    margin: 0 auto;
    padding:0;
  }
  .well a {
    font-size: 0.8em;
  }
}

@media screen and(max-width: 960px) {
  .container {
    max-width:960px;
  }
  .page-container{
    max-width:960px;
  }

}
@media screen and(max-height: 960px){
  .modalDialog{

  }
}

@media screen and(max-height: 640px){
  .modalDialog{

  }
}

